add travis to config

--- a/config/config.json
+++ b/config/config.json
@@ -22,5 +22,12 @@
         "rejectUnauthorized": false
       }
     }
+  },
+  "travis": {
+    "username": "travis",
+    "database": "forum_test",
+    "host": "127.0.0.1",
+    "dialect": "mysql",
+    "logging": false
   }
 }
